. [FIX] CCAnimation: bug in addFrames that resulted in incorrect delayPerUnit (issue #1341)
. [FIX] CCSprite: CCSprite bug in setDisplayFrameWithAnimationName
. [FIX] CCParticleSystem: unschedule update method when deallocated
. [FIX] CCParticleSystemQuad: Changed animation property to particleAnimation, for compiler warning
. [FIX] CCTouchDispatcher: fixed crash after showing UIAlertView (issue #1279)
. [FIX] CCGrabber: added log message to warn that grabber doesn't support transparent parts with a color buffer of RGB565
. [FIX] Compiler: fixed unrecognised clang pragmas so cocos can still be compiled with LLVM version < 2.0. 

version 1.1-beta2b 14-Mar-2012
. [FIX] CCUtils: missing method declaration

version 1.1-beta2 12-Mar-2012
. [NEW] v2.0 forward ported changes:
			LabelBMFont: added setFntFile method
			Animation: Added new animation format that supports delays per frame and notifications per frame
			Actions: Added ActionTargeted action. Useful to target other nodes from a sequence.
. [NEW] All: Code is compatible with ARC (issue #1199) 
. [NEW] CCArray: new sorting methods, replaceObjectAtIndex, isEqualToArray
. [NEW] ccFileUtiles: new iPad retina file extension (ipadhd)
. [NEW] DrawPrimitives: Added new functions, ccDrawRect, ccDrawSolidRect, ccDrawSolidPoly
. [NEW] DrawPrimitives: Added batch drawing of lines, ccDrawLines (issue #1081)
. [NEW] Node: Added onExitTransitionDidStart (issue #792)
. [NEW] ParticleSystem: supports animations in new animation format 
. [NEW] TileMap: supports in-memory TMX map creation (issue #1239)
. [NEW] TileMap: Flipped tiles can be changed during runtime (issue #1264)
. [NEW] Touchdispatcher: new implementation, supporting changing dispatchers based on (ranges) of properties, custom sorting and more (full list in online release notes)
. [NEW] Types: Added convenience function to create a ccColor4F from color components
. [FIX] Actions: incorrect behavior of CCRepeat